Add more Prettier config

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "react-scripts": "3.4.0"
   },
   "scripts": {
+    "format": "prettier \"src/**/*.{js,jsx,css,html}\" --write",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
